add some future vocabularies for dishes(categories) and wines(types and sweetness)
