# HotelSiteBackend/routes/index.js
@@ -15,4 +15,10 @@ router.use('/rooms', require('./roomRouter'));
 router.use('/wines', require('./wineRouter'));
 router.use('/pages', require('./pageRouter'));
 
+// справочники для блюд/вин
+router.use('/dish-categories', require('./dishCategoryRouter'));
+router.use('/wine-types', require('./wineTypeRouter'));
+router.use('/wine-sweetness', require('./wineSweetnessRouter'));
+
+
 module.exports = router;
